# maestro-agents

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/: sprint-22-state.json
.claude/commands/: create-spec.md  epic-new.md  sprint-new.md
docs/: architecture.md  getting-started.md
docs/sprints/: sprint-02_in-memory-adapter.md  sprint-03_tool-handlers.md  sprint-04_maestro-adapter.md  sprint-07_orchestrator.md  sprint-08_comprehensive-testing.md
examples/: 01_simple_query.py  02_custom_tools.py  03_multi_agent.py
kanban/: deferred.md  postmortem.md
kanban_tui/: __main__.py  app.py  scanner.py
scripts/: sprint_lifecycle.py
src/adapters/: kanban.py  maestro.py  memory.py
src/agents/: __init__.py  definitions.py  orchestrator.py
src/execution/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  context_selector.py  convenience.py  dependencies.py  gates.py  grooming.py  grooming_hook.py  hooks.py  init.py  phases.py  planning_artifacts.py  resume.py  runner.py  scheduler.py  synthesizer.py  validation.py
src/kanban/: __init__.py  handlers.py  models.py  scanner.py
src/tools/: __init__.py  handlers.py  server.py
src/workflow/: __init__.py  exceptions.py  interface.py  (+2 more)
tests/: conftest.py  test_adapter.py  test_agent_infrastructure.py  test_artifacts.py  test_claude_code_executor.py  test_cli.py  test_context_selector.py  test_cumulative_context.py  test_custom_tools.py  test_dependencies.py  test_e2e.py  test_e2e_integration.py  test_gates.py  test_grooming.py  test_handlers.py  test_handlers_edge_cases.py  test_hooks.py  test_inmemory_lifecycle.py  test_integration.py  test_integration_lifecycle.py  test_kanban.py  test_kanban_adapter.py  test_kanban_tui_actions.py  test_kanban_tui_scanner.py  test_lifecycle_protocol.py  test_memory_adapter.py  test_models.py  test_pause_resume.py  test_phase_runner.py  test_planning_agent.py  test_product_engineer.py  test_quality_engineer.py  test_runner_integration.py  test_scheduler.py  test_sprint_runner.py  test_step_models.py  test_suite_runner.py  test_synthesizer.py  test_test_runner.py  test_validation.py  (+1 more)
(+258 files in other folders)
