[project]
name = "team-agents-poc"
version = "0.1.0"
description = "Learning project for Claude Code agents — future integration with claude-maestro"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "textual>=3.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
markers = [
    "slow: tests that call real Claude SDK (deselect with -m 'not slow')",
]
