[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-agents"
version = "0.1.0"
description = "Multi-agent sprint execution system built on claude-agent-sdk."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "textual>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
maestro = "src.execution.cli:main"
maestro-board = "kanban_tui.app:run_board"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "kanban_tui*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
markers = [
    "slow: tests that call real Claude SDK (deselect with -m 'not slow')",
]
